--- a/sparql/TODO.txt
+++ b/sparql/TODO.txt
@@ -4,3 +4,6 @@ Pour le SPARQL :
 		- Si l'adresse est égal à "", null ou undefined, on prend l'adresse sparql (ou peut etre tout le tmps osef)
 		
 	Pour l'image, on nettoie le "Point (x, y)" pour avoir uniquement x et y. Et on le met dans un <img>.
+
+
+Pour l'image du monument, une fonction qui renvoi le lien.
